# dbslice

./: .gitignore  AGENTS.md  LICENSE  docker-compose.yml  pyproject.toml
src/dbslice/: audit.py  cli.py  config.py  dbutil.py  engine.py  env.py  logsetup.py  migrate.py
src/dbslice/commands/: audit_cmds.py  migrate_objs.py  migrate_tables_cmd.py  neuter.py  pipeline.py  pre_migrate.py  reset.py  swap.py
src/dbslice/dbutil/: __init__.py  constraints.py  ddl.py  functions.py  indexes.py  introspect.py  neuter.py  sequences.py  triggers.py
src/dbslice/engine/: __init__.py  families.py  selections.py
tests/: test_audit_minicom.py  test_cli.py  test_distinct_sources_minicom.py  test_families_minicom.py  test_listing_union_minicom.py  test_migrate_constraints_minicom.py  test_migrate_functions_minicom.py  test_migrate_indexes_minicom.py  test_migrate_pipeline_functions_triggers_minicom.py  test_migrate_sequences_minicom.py  test_migrate_tables_minicom.py  test_migrate_tables_skip_minicom.py  test_migrate_triggers_minicom.py  test_neuter_filter.py  test_neuter_minicom.py  test_neuter_parallel.py  test_pkmod_minicom.py  test_pre_migrate.py  test_precopy_minicom.py  test_precopy_only_minicom.py  test_reset_minicom.py  test_sharding_minicom.py  test_swap_unswap_minicom.py
tests/fixtures/minicom/: 01_schema.sql  02_seed.sql  minicom.yml
